--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.9.1",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.1",
     "mongodb": "^6.17.0",
