--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "react-tabs": "^6.1.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.22.0",
     "swiper": "^11.2.8"
